# ProFlex

./: .gitignore  LICENSE  README.md  interface_analyser.py  interface_analyzer.py  pydock_transformation.py  requirements.txt  rfd_data_generator.py  setup.cfg  setup.py
proflex/: assesment_preprocess.py  contigs.py  fix_diffmodels.sh  fix_diffmodels_attnpacked.sh  fix_diffused_attnpacked.sh  fix_diffused_pdbs.sh  fix_diffusion_models.py  interface_analyzer.py  maestro_fill_gaps.sh  merge_antibody_chains.py  pdb_attnpacker_fixer.py  pdb_preprocessor.py  pdb_processor.py  pdb_resnum.py  pdb_rfd_fixer.py  pdb_rfd_fixer_v2.py  pele_poses_processor.py  pele_postprocess.py  pydock_poses.py  pydock_transformation.py  remove_sidechains.py  repack_assessment_preprocess.py  resnum.py  rfd_contig_generator.py  rfd_contigs_generator.py  rfd_data_generator.py
proflex/interface/: __init__.py  interface_utils.py
proflex/pdb/: __init__.py  pdb_utils.py
proflex/pydock/: __init__.py  pydock_utils.py
proflex/rfdiffusion/: __init__.py  rfdiffusion_utils.py
proflex/utils/: __init__.py  pdb_adaptor.py  pdb_handler.py  pdb_interface_analyzer.py  pdb_utils.py
tests/: test_pdb_utils.py
