[metadata]
name = proflex
version = 0.0.1
author = Ismael Balafkir, Anna M. Diaz-Rovira
author_email = ibalafkir@gmail.com, annadiarov@gmail.com
description = Explore ProFlex protocol for rigid-body protein-protein docking, interface diffusion, and Monte Carlo rotations/translations using PyDock, RFDiffusion, and PELE.
keywords = protein-protein interaction, protein-protein docking, interface diffusion, Monte Carlo, PyDock, RFDiffusion, PELE
url = https://github.com/ibalafkir/ProFlex