[metadata]
name = proflex
version = 0.0.1
author = Ismael Balafkir, Anna M. Diaz-Rovira
author_email = ibalafkir@gmail.com, annadiarov@gmail.com
description = Explore ProFlex protocol for interface diffusion and Monte Carlo rotations/translations using RFdiffusion and PELE. Optimize protein interactions dynamically.
keywords = protein-protein interaction, interface diffusion, Monte Carlo, RFDiffusion, PELE
url = https://github.com/ibalafkir/ProFlex